feat: v1.3.0 release - Bug fixes and stability improvements
## Bug Fixes
- Fix login page infinite refresh issue (JWT token handling)
- Fix LazyInitializationException with DTO pattern for Hibernate proxies
- Fix Redis connection failure causing 500 errors (runtime fallback)
- Fix 403 Forbidden on public paths with permission checks

## New Features
- Token refresh mechanism with RefreshToken entity
- Rate limiter annotation and aspect
- Health check alert listener
- Alert service for system monitoring

## Improvements
- Redis cache manager with automatic fallback to in-memory cache
- JWT authentication for public paths to support permission checks
- DTO pattern in Product and Price entities to avoid proxy serialization
- JOIN FETCH queries for eager loading associations

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>